@@ -12,6 +12,7 @@ Changes in version 3.2 M2
 * infer return type of parameterized factory methods (SPR-9493)
 * add ContentNegotiationManager/ContentNegotiationStrategy to resolve requested media types
 * add support for the HTTP PATCH method
+* enable smart suffix pattern match in @RequestMapping methods (SPR-7632)
 
 Changes in version 3.2 M1 (2012-05-28)
 --------------------------------------
